--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,17 +36,6 @@ ul{
     font-size: 14px;
 }
 
-/* implementação de um todo */
-/* .clearfix{
-    overflow: auto;
-}
-.clearfix::after{
-    content:"";
-    clear:both;
-    display: block;
-} */
-
-/* customização */
 .top{
     background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('../../images/fundo.png') no-repeat bottom fixed;
     padding: 30px;    
@@ -59,7 +48,6 @@ ul{
     margin: 0 auto;
     width: 55%;
     height: 100%;
-    /* padding: 10px; */
 }
 .content-top > div {
     height: 100%;
@@ -79,9 +67,7 @@ ul{
 }
 .header-right{
     background: rgba(0, 0, 0, .35);
-    /* height: 500px; */
     width: 400px;
-    /* margin-bottom: 10px; */
 }
 .formulario{    
     padding: 20px 9px 20px 40px;    
@@ -107,11 +93,11 @@ ul{
     visibility: hidden;
 }
 .div-form small{    
-    /* padding: 15px; */
     bottom:0;
     left:0px;
     visibility: hidden;
 }
+
 /* Error and Success */
 .div-form.success input{
     border-color:#2ecc71;
@@ -138,7 +124,6 @@ ul{
     font-size: 14px;
     color: white;    
 }
-
 .formulario .form-submit{    
     margin: 30px 0 0 0;
     display: block;    
@@ -162,8 +147,6 @@ ul{
     width: 33.33%;
     height: 200px;
     float: left;
-    /* display: flex;
-    flex-direction: column; */
 }
 .servico-conteudo {
     padding: 10px 25px;
@@ -174,7 +157,7 @@ ul{
     display: block;
 }
 .peca-dem {
-    margin: 500px auto 100px auto;
+    margin-top: 500px;
     background: #333;
     height: 200px;
     width: 100%;    
@@ -195,4 +178,56 @@ ul{
 }
 .box-btn{
     padding: 84px 17% 0 18%;
+}
+.nossosClientes{
+    text-align: center;
+    margin-bottom: 30px;
+}
+.sistemaCall{
+    background-color: #505555;
+    height: 100px;
+}
+#sistema{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); 
+}
+.p-servicos{
+    text-align: justify;
+    orientation: landscape;
+}
+#depoimentos{
+    height: 400px;
+    background-color: #343a40;
+    margin-top: 400px;
+}
+.depoimentos-content{
+    margin-left: 25%;
+    padding: 20px;
+}
+.border{
+    border: #b5cf42 dotted;
+    margin: 20px 20px;
+    border-radius: 10px;
+    height: 150px;
+}
+.depoimentos-content p{
+    color: white;
+    text-align: justify;
+
+}
+.align-right{
+    text-align-last: right;
+
+}
+.avatar-depoimento{
+    border-radius: 200px;
+    size: 50px;
+    border: 2px solid #b5cf42;
+    height: 20%;
+    width: 20%;
+}
+#cliente-depoimentos{
+    float:left;
+    display: block;
 }
