desenvolvendo session de depoimentos Gabriela e Rafalel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,16 +37,14 @@ ul{
 }
 
 .top{
-    background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('../../images/fundo.png') no-repeat bottom fixed;
-    padding: 30px;    
-    margin: auto;
+    background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('../../images/fundo.png') no-repeat bottom fixed;       
     background-size: cover;
-    background-position: center;
+    background-position-y: center;   
 }
 .content-top {
     overflow: hidden;
     margin: 0 auto;
-    width: 55%;
+    width: 990px;
     height: 100%;
 }
 .content-top > div {
@@ -62,7 +60,7 @@ ul{
     width: 100%;
 }
 .aumente{
-    align-self: center;
+    text-align: center;
     font-weight: 600;
 }
 .header-right{
@@ -207,9 +205,9 @@ ul{
 }
 .border{
     border: #b5cf42 dotted;
-    margin: 20px 20px;
+    margin: 20px 10px;
     border-radius: 10px;
-    height: 150px;
+    height: 138px;
 }
 .depoimentos-content p{
     color: white;
@@ -218,16 +216,41 @@ ul{
 }
 .align-right{
     text-align-last: right;
+    float: left;
+}
+.align-right img{
+    text-align-last: left;
+    float: left;
+}
+
+.align-right p{
+    margin: 5px;
+    font-size: small;
+    margin-left: 15px;    
 
 }
 .avatar-depoimento{
     border-radius: 200px;
-    size: 50px;
     border: 2px solid #b5cf42;
-    height: 20%;
-    width: 20%;
+    height: 80%;
+    width: 80%;
 }
 #cliente-depoimentos{
     float:left;
     display: block;
+}
+.cliente-tag-gabriela{
+    margin-left: 136px;
+    height: 110px;    
+    width: 300px;
+}
+.cliente-tag-rafael{
+    margin-left: 79px;
+    height: 110px;
+    /* border: 2px solid rgb(186, 25, 25); */
+    width: 350px;
+}
+.content-left{
+    margin-top: 30px;
+    margin-left: 20px;
 }
